Fix J letter clipping in Hero title and globally in gold gradient

--- a/src/index.css
+++ b/src/index.css
@@ -106,6 +106,11 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
+    display: inline-block;
+    padding-bottom: 0.1em;
+    padding-left: 0.1em;
+    padding-right: 0.1em;
+    margin-bottom: -0.1em;
   }
 
   .bg-gradient-radial {
